--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="main-content">
         <div class="video-fondo">
     <video autoplay loop muted playsinline>
-        <source src="img/WhatsApp Video 2025-08-11 at 11.41.03 AM.mp4" type="video/mp4">
+        <source src="img/fincaa.mp4" type="video/mp4">
         Tu navegador no soporta videos.
     </video>
 </div>
@@ -903,12 +903,18 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
   <!-- Toggle de chat: video circular -->
   <button id="abrirChatBtn" class="potrillos-chat-toggle" aria-label="Abrir chat" type="button">
-    <video id="potrillos-toggle-video" autoplay muted loop playsinline preload="metadata" aria-hidden="true">
-      <source src="img/chatv.mp4" type="video/mp4">
-      <!-- Si no hay video, muestra emoji/texto -->
-      <!-- Tu navegador no soporta video -->
-    </video>
-  </button>
+  <svg class="chat-svg" viewBox="0 0 64 64" width="56" height="56" aria-hidden="true" focusable="false">
+    <circle class="ring" cx="32" cy="32" r="30" fill="none" stroke="currentColor" stroke-width="2"/>
+    <circle class="core" cx="32" cy="32" r="18" fill="currentColor"/>
+    <path class="bubble" d="M18 26c0-6 6-10 14-10s14 4 14 10c0 6-6 10-14 10H30l-6 6V26z" fill="#ffffff"/>
+    <g class="dots" fill="#0d6efd">
+      <circle cx="26" cy="30" r="2.5"/>
+      <circle cx="32" cy="30" r="2.5"/>
+      <circle cx="38" cy="30" r="2.5"/>
+    </g>
+  </svg>
+  <span id="chatBadge" class="chat-badge hidden">1</span>
+</button>
 
   <!-- Carga del script del chatbot -->
   <script src="page/chat.js"></script>
