--- a/index.html
+++ b/index.html
@@ -741,8 +741,8 @@
         <div class="footer-brand mb-3">
           <img src="img/Imagen1.png" alt="Finca los 6 Potrillos" class="footer-logo">
           <div>
-            <h4>Finca los 6 Potrillos</h4>
-            <small class="d-block">Eventos · Capilla · Salones · Asadores</small>
+            <h4 class="footer-text">Finca los 6 Potrillos</h4>
+            <small class="d-block footer-text">Eventos · Capilla · Salones · Asadores</small>
           </div>
         </div>
 
@@ -750,16 +750,16 @@
           <div class="info-card">
             <i class="bi bi-geo-alt-fill"></i>
             <div>
-              <strong>Ubicación</strong>
-              <p style="margin:0;"><a href="https://maps.app.goo.gl/dURT7QQNuvYVDsvs6?g_st=aw" target="_blank" rel="noopener">Ver en Google Maps</a></p>
+              <strong class="footer-text">Ubicación</strong>
+              <p style="margin:0;"><a href="https://maps.app.goo.gl/dURT7QQNuvYVDsvs6?g_st=aw" target="_blank" rel="noopener" class="footer-link">Ver en Google Maps</a></p>
             </div>
           </div>
 
           <div class="info-card">
             <i class="bi bi-clock-fill"></i>
             <div>
-              <strong>Horario</strong>
-              <p style="margin:0;">Lun-Dom · 9:00 - 18:00</p>
+              <strong class="footer-text">Horario</strong>
+              <p style="margin:0;" class="footer-text">Lun-Dom · 9:00 - 18:00</p>
             </div>
           </div>
         </div>
@@ -772,46 +772,45 @@
           <a href="tel:4271522854" class="contact-card phone">
             <div class="icon-wrap"><i class="bi bi-telephone-fill"></i></div>
             <div class="contact-info">
-              <strong>Llamar ahora</strong>
-              <span>427 152 2854</span>
+              <strong class="footer-text">Llamar ahora</strong>
+              <span class="footer-text">427 152 2854</span>
             </div>
           </a>
 
           <a href="https://wa.me/524271522854" target="_blank" class="contact-card whatsapp">
             <div class="icon-wrap"><i class="bi bi-whatsapp"></i></div>
             <div class="contact-info">
-              <strong>WhatsApp</strong>
-              <span>Mensaje directo</span>
+              <strong class="footer-text">WhatsApp</strong>
+              <span class="footer-text">Mensaje directo</span>
             </div>
           </a>
-
         </div>
       </div>
 
-      <!-- Redes y alternativa en lugar de TikTok -->
+      <!-- Redes y Airbnb -->
       <div class="col-lg-4">
         <h5 class="footer-title mb-3">Síguenos</h5>
 
         <div class="social-grid mb-3">
           <a href="https://www.facebook.com/share/15HBTpxFeT/" target="_blank" class="social-item facebook">
             <i class="bi bi-facebook"></i>
-            <span>Facebook</span>
+            <span class="footer-text">Facebook</span>
           </a>
 
           <a href="https://www.instagram.com/finca_6?igsh=MTRvbHA1aXM3b283cw==" target="_blank" class="social-item instagram">
             <i class="bi bi-instagram"></i>
-            <span>Instagram</span>
+            <span class="footer-text">Instagram</span>
           </a>
 
           <a href="https://www.airbnb.mx/rooms/1188606272569020722?viralityEntryPoint=1&s=76" target="_blank" class="social-item airbnb" rel="noopener">
             <i class="bi bi-house-fill"></i>
-            <span>Airbnb</span>
+            <span class="footer-text">Airbnb</span>
           </a>
         </div>
 
         <div class="social-cta">
-          <p class="mb-1">#FincaLos6Potrillos</p>
-          <small>Comparte tus fotos y etiquétanos</small>
+          <p class="mb-1 footer-text">#FincaLos6Potrillos</p>
+          <small class="footer-text">Comparte tus fotos y etiquétanos</small>
         </div>
       </div>
     </div>
@@ -819,8 +818,8 @@
     <hr class="footer-divider">
 
     <div class="footer-bottom">
-      <p class="mb-0">&copy; 2023 Finca los 6 potrillos</p>
-      <p class="mb-0"> <a href="https://wa.me/524273787543" target="_blank" rel="noopener">Desarrollado por</a></p>
+      <p class="mb-0 footer-text">&copy; 2023 Finca los 6 potrillos</p>
+      <p class="mb-0"><a href="https://wa.me/524273787543" target="_blank" rel="noopener" class="footer-link">Desarrollado por</a></p>
     </div>
   </div>
 </footer>
